fix: not-found being squished (#5369)

--- a/packages/next/src/views/NotFound/index.scss
+++ b/packages/next/src/views/NotFound/index.scss
@@ -2,6 +2,7 @@
 
 .not-found {
   margin-top: var(--base);
+  display: flex;
 
   & > * {
     &:first-child {
